Rename nuts_getopts_cmdlet_options* functions
* Renamed from nuts_getopts_cmdlet_options* to nuts_getopts_cmdlet_option_list*
* Moved from options.c to option_list.c

--- a/src/getopts-tool/CMakeLists.txt
+++ b/src/getopts-tool/CMakeLists.txt
@@ -30,7 +30,8 @@ add_library(nuts-getopts-tool STATIC
   head.c
   help.c
   internal.h
-  options.c
+  option_list.c
+  option_list.h
   tool.c
 )
 
