New nuts_getopts_cmdlet_option
This type is returned by nuts_getopts_cmdlet_add_option() and represents an options.

There will be further functions available on nuts_getopts_cmdlet_option to assign
help information.

--- a/src/getopts-tool/CMakeLists.txt
+++ b/src/getopts-tool/CMakeLists.txt
@@ -30,6 +30,8 @@ add_library(nuts-getopts-tool STATIC
   head.c
   help.c
   internal.h
+  option.c
+  option.h
   option_list.c
   option_list.h
   tool.c
