Implement some general converter

--- a/src/getopts-tool/CMakeLists.txt
+++ b/src/getopts-tool/CMakeLists.txt
@@ -28,6 +28,8 @@ add_library(nuts-getopts-tool STATIC
   ${PUBLIC_HEADER}
   cmdlet.c
   cmdlet.h
+  convert.c
+  convert.h
   help.c
   help.h
   option.c
