--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -831,7 +831,8 @@ WARN_LOGFILE           =
 # Note: If this tag is empty the current directory is searched.
 
 INPUT                  = @PROJECT_SOURCE_DIR@/src/getopts/nuts-getopts.h \
-                         @PROJECT_SOURCE_DIR@/src/getopts-tool/nuts-getopts-tool.h
+                         @PROJECT_SOURCE_DIR@/src/getopts-tool/nuts-getopts-tool.h \
+                         @PROJECT_SOURCE_DIR@/src/examples/getopts.c
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
