--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -832,7 +832,8 @@ WARN_LOGFILE           =
 
 INPUT                  = @PROJECT_SOURCE_DIR@/src/getopts/nuts-getopts.h \
                          @PROJECT_SOURCE_DIR@/src/getopts-tool/nuts-getopts-tool.h \
-                         @PROJECT_SOURCE_DIR@/src/examples/getopts.c
+                         @PROJECT_SOURCE_DIR@/src/examples/getopts.c \
+                         @PROJECT_SOURCE_DIR@/src/examples/getopts_group.c
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
