--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -170,8 +170,7 @@ FULL_PATH_NAMES        = YES
 # will be relative from the directory where doxygen is started.
 # This tag requires that the tag FULL_PATH_NAMES is set to YES.
 
-STRIP_FROM_PATH        = @PROJECT_SOURCE_DIR@/src/getopts \
-                         @PROJECT_SOURCE_DIR@/src/getopts-tool
+STRIP_FROM_PATH        = @PROJECT_SOURCE_DIR@/src
 
 # The STRIP_FROM_INC_PATH tag can be used to strip a user-defined part of the
 # path mentioned in the documentation of a class, which tells the reader which
@@ -830,10 +829,9 @@ WARN_LOGFILE           =
 # spaces. See also FILE_PATTERNS and EXTENSION_MAPPING
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @PROJECT_SOURCE_DIR@/src/getopts/nuts-getopts.h \
-                         @PROJECT_SOURCE_DIR@/src/getopts-tool/nuts-getopts-tool.h \
-                         @PROJECT_SOURCE_DIR@/src/examples/getopts.c \
-                         @PROJECT_SOURCE_DIR@/src/examples/getopts_group.c
+INPUT                  = @PROJECT_SOURCE_DIR@/src/nuts-getopts.h \
+                         @PROJECT_SOURCE_DIR@/examples/getopts.c \
+                         @PROJECT_SOURCE_DIR@/examples/getopts_group.c
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -908,7 +906,7 @@ EXCLUDE_SYMBOLS        =
 # that contain example code fragments that are included (see the \include
 # command).
 
-EXAMPLE_PATH           = @PROJECT_SOURCE_DIR@/src/examples
+EXAMPLE_PATH           = @PROJECT_SOURCE_DIR@/examples
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp and
